[package]
name = "game_randomizer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.4"
rand_distr = "0.4.2"
indicatif = "0.16.2"
colored = "2.0"
